--- a/kubectl.yaml
+++ b/kubectl.yaml
@@ -34,7 +34,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: cluster-admin
+  name: kubectl-admin
 rules:
 - apiGroups: ["*"]
   resources: ["*"]
